tests/files/type_checker_tests/should_fail/015.cmdr
//Should fail when pre decrementing something that isn't a variable
x = --2;